# apps/backend/api/http/router/telegram.go
@@ -12,7 +12,9 @@ func RegisterTelegramWalletRoutes(srv *http.Server, router *gin.RouterGroup) {
 
 	walletGroup := router
 	{
+		walletGroup.POST("/users", walletHandler.CreateTelegramUser)
 		walletGroup.POST("", walletHandler.TrackWalletTelegram)
 		walletGroup.GET("/:chat_id", walletHandler.GetTrackedWalletsTelegram)
+		walletGroup.DELETE("/:chat_id/:address", walletHandler.UntrackWalletTelegram)
 	}
 }
